--- a/playbook/main.yaml
+++ b/playbook/main.yaml
@@ -11,12 +11,14 @@
     ec2_image: ami-06878d265978313ca
     ec2_instance_type: t2.small
     ec2_key_name: vockey
+    aws_region: us-east-1  # Reemplaza con tu región deseada
 
   tasks:
   - name: Crear un grupo de seguridad
-    ec2_group:
+    amazon.aws.ec2_group:  # Asegúrate de usar el nombre de colección correcto
       name: "{{ ec2_security_group }}"
       description: "{{ ec2_security_group_description }}"
+      region: "{{ aws_region }}"  # Especifica la región aquí
       rules:
       - proto: tcp
         from_port: 22
@@ -33,11 +35,12 @@
     register: security_group
 
   - name: Crear una instancia EC2
-    amazon.aws.ec2_instance:
+    amazon.aws.ec2_instance:  # Asegúrate de usar el nombre de colección correcto
       name: "{{ ec2_instance_name }}"
       key_name: "{{ ec2_key_name }}"
       security_group: "{{ ec2_security_group }}"
       instance_type: "{{ ec2_instance_type }}"
       image_id: "{{ ec2_image }}"
+      region: "{{ aws_region }}"  # Especifica la región aquí
       state: running      
     register: ec2
