--- a/playbook/sg.yaml
+++ b/playbook/sg.yaml
@@ -5,8 +5,8 @@
   gather_facts: false
 
   vars:
-    ec2_security_group: sg_ejemplo_12
-    ec2_security_group_description: Grupo de seguridad del ejemplo 12
+    ec2_security_group: sg_test_ipd_v_uno
+    ec2_security_group_description: Grupo de seguridad example ipd
     ec2_instance_name: instancia_ejemplo_12
     ec2_image: ami-06878d265978313ca
     ec2_instance_type: t2.small
