--- a/playbook/sg.yaml
+++ b/playbook/sg.yaml
@@ -5,19 +5,19 @@
   gather_facts: false
 
   vars:
-    ec2_security_group: sg_test_ipd_v_uno
-    ec2_security_group_description: Grupo de seguridad example ipd
+    ec2_security_group: sg_test_ipd_v_uno_dos
+    ec2_security_group_description: Grupo de seguridad example ipd2
     ec2_instance_name: instancia_ejemplo_12
     ec2_image: ami-06878d265978313ca
     ec2_instance_type: t2.small
     ec2_key_name: vockey
     aws_region: us-east-1  # Reemplaza con tu región deseada
-    cidr_block: "10.0.0.0/16"  # Bloque CIDR para la nueva VPC
+    cidr_block: "11.0.0.0/16"  # Bloque CIDR para la nueva VPC
 
   tasks:
   - name: Crear una nueva VPC
     amazon.aws.ec2_vpc_net:
-      name: "vpc_example"
+      name: "vpc_ipd_2"
       cidr_block: "{{ cidr_block }}"
       region: "{{ aws_region }}"
       state: present
