--- a/playbook/new.yaml
+++ b/playbook/new.yaml
@@ -70,7 +70,8 @@
       register: task_role
 
     - name: Attach IAM Policy to Task Role
-      iam_policy_attachment:
+ #     iam_policy_attachment:
+      amazon.aws.iam_policy:
         name: "ecs-task-policy"
         policy_arn: "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
         roles: "{{ JenkinsTaskRoleName }}"
