--- a/playbook/new.yaml
+++ b/playbook/new.yaml
@@ -28,7 +28,7 @@
       ec2_vpc_subnet:
         vpc_id: "{{ vpc_result.vpc.id }}"
         cidr: "{{ SubnetCidrBlock }}"
-        az: "us-east-1a"  # Cambia a la AZ que necesites
+        az: "us-east-1"  # Cambia a la AZ que necesites
         state: present
         map_public: yes
       register: subnet_result
