--- a/playbook/new.yaml
+++ b/playbook/new.yaml
@@ -29,7 +29,8 @@
       ec2_vpc_subnet:
         vpc_id: "{{ vpc_result.vpc.id }}"
         cidr: "{{ SubnetCidrBlock }}"
-        az: "us-east-1"  # Cambia a la AZ que necesites
+        az: "us-east-1a"  # Asegúrate de especificar la zona de disponibilidad
+        region: "us-east-1"
         state: present
         map_public: yes
       register: subnet_result
