--- a/playbook/other.yaml
+++ b/playbook/other.yaml
@@ -3,6 +3,12 @@
 
   tasks:
     - set_fact: EcsClusterName="YOUR_CLUSTER"
+
+    - name: Crear clúster de ECS
+      amazon.aws.ecs_cluster:
+        name: YOUR_CLUSTER
+        region: us-east-1
+      register: ecs_cluster
     
     - name: create task definition for Jenkins
       ecs_taskdefinition:
