--- a/playbook/other.yaml
+++ b/playbook/other.yaml
@@ -5,7 +5,7 @@
     - set_fact: EcsClusterName="YOUR_CLUSTER"
 
     - name: Crear clúster de ECS
-      amazon.aws.ecs_cluster:
+      community.aws.ecs_cluster:
         name: YOUR_CLUSTER
         region: us-east-1
         register: ecs_cluster
