--- a/playbook/other.yaml
+++ b/playbook/other.yaml
@@ -8,6 +8,7 @@
       community.aws.ecs_cluster:
         name: YOUR_CLUSTER
         region: us-east-1
+        state: present  # Añade esta línea
         register: ecs_cluster
     
     - name: create task definition for Jenkins
