--- a/playbook/other.yaml
+++ b/playbook/other.yaml
@@ -6,19 +6,18 @@
 
     - name: Crear clúster de ECS
       community.aws.ecs_cluster:
-        name: YOUR_CLUSTER
+        name: "{{ EcsClusterName }}"
         region: us-east-1
-        state: present  # Añade esta línea
-       # register: ecs_cluster
+        state: present
     
     - name: create task definition for Jenkins
       ecs_taskdefinition:
         containers:
         - name: jenkins
-          cpu: 10
+          cpu: 512  # Ajusta según tus necesidades
           essential: true
-          image: "jenkins/jenkins:lts"  # Utiliza la imagen LTS de Jenkins
-          memory: 1000  # Ajusta la memoria según sea necesario
+          image: "jenkins/jenkins:lts"  # Imagen pública de Jenkins en Docker Hub
+          memory: 1024  # Ajusta según sea necesario
           portMappings:
           - containerPort: 8080  # Puerto por defecto para Jenkins
             hostPort: 8080
@@ -28,18 +27,17 @@
         state: present
         region: us-east-1
         family: jenkins_from_ansible  # Nombre de la familia de la definición de tarea
+        requires_compatibilities:
+          - FARGATE  # Requerido para usar Fargate
+        network_mode: awsvpc  # Requerido para Fargate
+        cpu: 512  # Requerido por Fargate
+        memory: 1024  # Requerido por Fargate
       register: task_output    
 
-    - name: Print details name      
-      debug: var=task_output.taskdefinition["family"]
-      
-    - name: Print details Task revision     
-      debug: var=task_output.taskdefinition["revision"]
-      
-    - name: Print details Task name and revision     
-      debug: 
+    - name: Print details Task family and revision     
+      debug:
         msg: "{{ task_output.taskdefinition['family'] }}:{{ task_output.taskdefinition['revision'] }}"
-    
+
     - name: create ECS service
       ecs_service:
         state: present
@@ -48,6 +46,8 @@
         task_definition: "{{ task_output.taskdefinition['family'] }}:{{ task_output.taskdefinition['revision'] }}"
         desired_count: 1  
         region: us-east-1
+        launch_type: FARGATE  # Especifica Fargate como tipo de lanzamiento
+        network_configuration: {}  # Modo de red Fargate, sin especificar subnets ni security groups
       register: service_output
     
     - name: Service Status     
