--- a/playbook/other.yaml
+++ b/playbook/other.yaml
@@ -73,11 +73,11 @@
         desired_count: 1
         launch_type: FARGATE
         network_configuration:
-          awsvpc_configuration:
-            subnets:
-              - "{{ SubnetId }}"
-            security_groups:
-              - "{{ SecurityGroupId }}"
+ #         awsvpc_configuration:
+        subnets:
+          - subnet-09f22bd8b4fc4bece
+        security_groups:
+          - sg-0c31f203e2f118f92
             assign_public_ip: "ENABLED"
         region: us-east-1
       register: service_output
