--- a/playbook/otramas.yml
+++ b/playbook/otramas.yml
@@ -48,7 +48,7 @@
       register: rt_output
 
     - name: Agregar ruta predeterminada a la tabla de rutas
-      amazon.aws.ec2_vpc_route:
+      amazon.aws.ec2_vpc_route_table:
         route_table_id: "{{ rt_output.route_table.id }}"
         cidr: "0.0.0.0/0"
         gateway_id: "{{ igw_output.internet_gateway.id }}"
