--- a/playbook/otramas.yml
+++ b/playbook/otramas.yml
@@ -54,11 +54,14 @@
         gateway_id: "{{ igw_output.internet_gateway.id }}"
         region: us-east-1
 
-    - name: Asociar tabla de rutas a la subred
-      amazon.aws.ec2_vpc_route_table_subnet_association:
-        subnet_id: "{{ subnet_output.subnet.id }}"
+    - name: Asociar subred a la tabla de rutas
+      amazon.aws.ec2_vpc_route_table:
+        state: present
         route_table_id: "{{ rt_output.route_table.id }}"
+        vpc_id: "{{ vpc_output.vpc.id }}"
         region: us-east-1
+        associations:
+          - subnet_id: "{{ subnet_output.subnet.id }}"
 
     - set_fact: 
         EcsClusterName: "YOUR_CLUSTER"
