--- a/playbook/otramas.yml
+++ b/playbook/otramas.yml
@@ -49,9 +49,9 @@
 
     - name: Agregar ruta predeterminada a la tabla de rutas
       amazon.aws.ec2_vpc_route_table:
-        route_table_id: "{{ rt_output.route_table.id }}"
+        route_table_id: "{{ rt_output.route_table_id }}"
         cidr: "0.0.0.0/0"
-        gateway_id: "{{ igw_output.gateway.id }}"
+        gateway_id: "{{ igw_output.gateway_id }}"
         region: us-east-1
 
     - name: Asociar subred a la tabla de rutas
