--- a/playbook/otramas.yml
+++ b/playbook/otramas.yml
@@ -52,7 +52,9 @@
         route_table_id: "{{ rt_output.route_table.route_table_id }}"
         cidr: "0.0.0.0/0"
         gateway_id: "{{ igw_output.gateway_id }}"
+        vpc_id: "{{ vpc_output.vpc.id }}"
         region: us-east-1
+        state: present
 
     - name: Asociar subred a la tabla de rutas
       amazon.aws.ec2_vpc_route_table:
