--- a/playbook/otramas.yml
+++ b/playbook/otramas.yml
@@ -50,7 +50,7 @@
     - name: Agregar ruta predeterminada a la tabla de rutas
       amazon.aws.ec2_vpc_route_table:
         route_table_id: "{{ rt_output.route_table.route_table_id }}"
-        cidr: "0.0.0.0/0"
+        destination_cidr_block: "0.0.0.0/0"
         gateway_id: "{{ igw_output.gateway_id }}"
         vpc_id: "{{ vpc_output.vpc.id }}"
         region: us-east-1
