--- a/playbook/otramas.yml
+++ b/playbook/otramas.yml
@@ -49,16 +49,14 @@
 
     - name: Configurar tabla de rutas
       amazon.aws.ec2_vpc_route_table:
-        vpc_id: "{{ vpc_output.vpc.id }}"
-        route_table_id: "{{ rt_output.route_table.route_table_id }}"
+        vpc_id: vpc-0ac8ddf015495061f
         region: us-east-1
-        gateway_id: "{{ igw_output.gateway_id }}"
-        state: present
         routes:
-          - dest: "0.0.0.0/0"  # Rango de dirección de destino
-            gateway_id: "{{ igw_output.gateway_id }}"  # Gateway asociado a la ruta
+          - dest: "0.0.0.0/0"  # Ruta a Internet
+            gateway_id: igw-0af3dc33cd2b23930
         tags:
-          Name: "Route Table"
+          Name: "Jenkins Route Table"
+      register: route_table
 
 
     - name: Asociar subred a la tabla de rutas
